--- a/vue3_communication/package.json
+++ b/vue3_communication/package.json
@@ -2,7 +2,7 @@
   "name": "communication-test",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --open",
+    "dev": "vite",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
@@ -18,7 +18,7 @@
     "mitt": "^3.0.0",
     "pinia": "^2.0.14",
     "pubsub-js": "^1.9.4",
-    "vue": "^3.2.36",
+    "vue": "^3.3.4",
     "vue-router": "^4.0.15"
   },
   "devDependencies": {
@@ -33,7 +33,7 @@
     "eslint-plugin-vue": "^8.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
-    "typescript": "~4.7.2",
+    "typescript": "^5.1.3",
     "vite": "^2.9.9",
     "vue-tsc": "^0.35.2"
   }
